--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /MagiTest2/nbproject/private/
 /MagiTest2/dist/
 /MagiTest2/build/
+/Ass_HE190424_System_Manage_LeaveApplication/build/
+/Ass_HE190424_System_Manage_LeaveApplication/dist/
